--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
         <div class="box2">
             <div class="button-container">
                 <a th:href="@{/atm/main/withdraw}" class="but">Withdraw</a>
-                <a th:href="@{/transfer}" class="but">Transfer</a>
+                <a th:href="@{/atm/main/transfer}" class="but">Transfer</a>
                 <a th:href="@{/balance}" class="but">Balance</a>
                 <a th:href="@{/Create}" class="but">Deposit</a>
             </div>
